// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes text 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <MFACodeComponent
    onChangeText={[Function bound dispatchAction]}
    onSubmit={[Function completeMfa]}
    testID=\\"MFACodeComponent\\"
-   value=\\"\\"
+   value=\\"123456\\"
  />"
`;

exports[`renders correctly 1`] = `
<MFACodeComponent
  onChangeText={[Function]}
  onSubmit={[Function]}
  testID="MFACodeComponent"
  value=""
/>
`;

exports[`renders loading and error 1`] = `
<MFACodeComponent
  error={5}
  loading={true}
  onChangeText={[Function]}
  onSubmit={[Function]}
  testID="MFACodeComponent"
  value=""
/>
`;
